move exceptions to a separate package